[gd_scene load_steps=3 format=3 uid="uid://bsps5nd8dwjmk"]

[ext_resource type="Script" path="res://scripts/menu/settingsMenuPanel.gd" id="1_1otni"]

[sub_resource type="LabelSettings" id="LabelSettings_w5i50"]
font_size = 48

[node name="SettingsMenuPanel" type="VBoxContainer"]
anchors_preset = 7
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
offset_left = -576.0
offset_top = -448.0
offset_right = 576.0
grow_horizontal = 2
grow_vertical = 0
size_flags_horizontal = 4
size_flags_vertical = 6
script = ExtResource("1_1otni")

[node name="MasterVolume" type="Control" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2

[node name="MasterVolumeSlider" type="HSlider" parent="MasterVolume"]
layout_mode = 2
offset_left = 376.0
offset_top = 40.0
offset_right = 776.0
offset_bottom = 70.0
max_value = 10.0

[node name="Label" type="Label" parent="MasterVolume"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_left = 376.0
offset_right = 776.0
offset_bottom = 40.0
text = "Master Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="MusicVolume" type="Control" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2

[node name="MusicVolumeSlider" type="HSlider" parent="MusicVolume"]
layout_mode = 2
offset_left = 376.0
offset_top = 40.0
offset_right = 776.0
offset_bottom = 70.0
max_value = 10.0

[node name="Label" type="Label" parent="MusicVolume"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_left = 376.0
offset_right = 776.0
offset_bottom = 40.0
text = "Music Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="AmbientVolume" type="Control" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2

[node name="AmbientVolumeSlider" type="HSlider" parent="AmbientVolume"]
layout_mode = 2
offset_left = 376.0
offset_top = 40.0
offset_right = 776.0
offset_bottom = 70.0
max_value = 10.0

[node name="Label" type="Label" parent="AmbientVolume"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_left = 376.0
offset_right = 776.0
offset_bottom = 40.0
text = "Ambient Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="SFXVolume" type="Control" parent="."]
custom_minimum_size = Vector2(200, 60)
layout_mode = 2

[node name="SFXVolumeSlider" type="HSlider" parent="SFXVolume"]
layout_mode = 2
offset_left = 376.0
offset_top = 40.0
offset_right = 776.0
offset_bottom = 70.0
max_value = 10.0

[node name="Label" type="Label" parent="SFXVolume"]
custom_minimum_size = Vector2(0, 25)
layout_mode = 0
offset_left = 376.0
offset_right = 776.0
offset_bottom = 40.0
text = "SFX Volume"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Spacer" type="Control" parent="."]
custom_minimum_size = Vector2(0, 40)
layout_mode = 2

[node name="Return" type="TextureButton" parent="."]
custom_minimum_size = Vector2(300, 75)
layout_mode = 2

[node name="Label" type="Label" parent="Return"]
custom_minimum_size = Vector2(1152, 75)
layout_mode = 0
offset_right = 40.0
offset_bottom = 23.0
text = "Return"
label_settings = SubResource("LabelSettings_w5i50")
horizontal_alignment = 1
vertical_alignment = 1

[connection signal="value_changed" from="MasterVolume/MasterVolumeSlider" to="." method="_on_master_volume_slider_value_changed"]
[connection signal="value_changed" from="MusicVolume/MusicVolumeSlider" to="." method="_on_music_volume_slider_value_changed"]
[connection signal="value_changed" from="AmbientVolume/AmbientVolumeSlider" to="." method="_on_ambient_volume_slider_value_changed"]
[connection signal="drag_ended" from="SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_drag_ended"]
[connection signal="drag_started" from="SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_drag_started"]
[connection signal="value_changed" from="SFXVolume/SFXVolumeSlider" to="." method="_on_sfx_volume_slider_value_changed"]
[connection signal="pressed" from="Return" to="." method="_on_return_pressed"]
